--- a/StockManager/Views/PurchaseOrders/Details.cshtml
+++ b/StockManager/Views/PurchaseOrders/Details.cshtml
@@ -29,7 +29,49 @@
 
         <dd>
             @Html.DisplayFor(model => model.InvoiceDate)
-        </dd>       
+        </dd>
+        
+        <dt>
+            Dispatch Document Number
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.dispatch_document_number)
+        </dd> 
+        
+        <dt>
+            Dispatch Through
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.dispatched_through)
+        </dd> 
+        
+        <dt>
+            Destination
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.destination)
+        </dd> 
+        
+        <dt>
+            Bale Nos
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.bale_numbers)
+        </dd> 
+        
+        <dt>
+            Description
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd> 
+        
+               
     </dl>
 </div>
 <p>
