--- a/StockManager/Views/PrinterChalans/Details.cshtml
+++ b/StockManager/Views/PrinterChalans/Details.cshtml
@@ -22,6 +22,30 @@
         <dd>
             @Html.DisplayFor(model => model.ChalanDate)
         </dd>
+        <dt>
+            Document Number
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.dispatch_document_number)
+        </dd>
+        <dt>
+            Dispatch Through
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.dispatched_through)
+        </dd>
+        <dt>
+            Bale Numbers
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.bale_numbers)
+        </dd>
+        <dt>
+            Description
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
     </dl>
 </div>
 <p>
