--- a/StockManager/Views/PurchaseOrders/Index.cshtml
+++ b/StockManager/Views/PurchaseOrders/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<StockManager.Models.PurchaseOrder>
-
+﻿@*@model IEnumerable<StockManager.Models.PurchaseOrder>*@
+@model PagedList.IPagedList<StockManager.Models.PurchaseOrder>
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -55,3 +56,7 @@
         </tr>
     }
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page }))
