--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <title>Stock Manager</title>
     @Styles.Render("~/Content/css") 
     @Styles.Render("~/Content/DateCSS")
+    @RenderSection("css", false)
 </head>
 <body>
 
@@ -73,6 +74,12 @@
                         <a  href="~/Products/Index">
                             <i class="fa fa-life-bouy"></i>
                             <span>Product</span>
+                        </a>
+                    </li>   
+                    <li class="mt">
+                        <a href="~/Invoices/Index">
+                            <i class="fa fa-life-bouy"></i>
+                            <span>Invoices</span>
                         </a>
                     </li>                   
                     <li class="sub-menu">
