User login, list, edit, details and delete

--- a/StockManager/Views/Invoices/Index.cshtml
+++ b/StockManager/Views/Invoices/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<StockManager.Models.InvoiceMaster>
-
+﻿@model PagedList.IPagedList<StockManager.Models.InvoiceMaster>
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -58,3 +58,7 @@
     }
 
 </table>
+
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page }))
