--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -77,9 +77,15 @@
                         </a>
                     </li>   
                     <li class="mt">
-                        <a href="~/Invoices/Index">
+                        <a href="@Url.Action("Index", "Invoices")">
                             <i class="fa fa-life-bouy"></i>
                             <span>Invoices</span>
+                        </a>
+                    </li>    
+                    <li class="mt">
+                        <a href="@Url.Action("Index", "Users")">
+                            <i class="fa fa-life-bouy"></i>
+                            <span>Users</span>
                         </a>
                     </li>                   
                     <li class="sub-menu">
@@ -91,7 +97,13 @@
                             <li><a href="~/Report/VendorWiseStock">Vendor Wise Stock</a></li>
                             <li><a href="~/Report/ProductWiseStock">Product Wise Stock</a></li>
                         </ul>
-                    </li>                   
+                    </li>            
+                    <li class="mt">
+                        <a href="@Url.Action("Logout", "Users")">
+                            <i class="fa fa-file-pdf-o"></i>
+                            <span>Logout</span>
+                        </a>
+                    </li>       
                 <!-- sidebar menu end-->
             </div>
         </aside>
