Users password reset through email.

--- a/StockManager/Views/Users/ResetPassword.cshtml
+++ b/StockManager/Views/Users/ResetPassword.cshtml
@@ -1,7 +1,4 @@
-﻿@model StockManager.Models.LoginVM
-
-@{
-    ViewBag.Title = "Login";
+﻿@{
     Layout = "";
 }
 
@@ -21,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
-    <title>Login</title>
+    <title>Reset Password</title>
 </head>
 <body>
     <div class="container">
@@ -38,57 +35,44 @@
                 {
                     @Html.AntiForgeryToken()
 
+                    <input type="hidden" name="token" value="@ViewBag.token" />
+
                     <div class="form-group">
-                        @{
-                            if (Session["SUCCESS"] != null)
+                        @{ 
+                            if (ViewBag.ERR!= null)
                             {
-                                <div class="alert alert-success">
-                                    @Session["SUCCESS"]
+                                <div class="alert alert-danger">
+                                    @ViewBag.ERR
                                 </div>
                             }
                         }
                     </div>
 
-                    @Html.Hidden("return_url", Model.return_url)
-
-                    <div class="form-horizontal">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    </div>
-
                     <div class="form-group">
-                        <label for="name" class="cols-sm-2 control-label">Your Name</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                                @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control", Id = "name" } })
-                            </div>
-                            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                   
-                    <div class="form-group">
-                        <label for="password" class="cols-sm-2 control-label">Password</label>
+                        <label class="cols-sm-2 control-label">New Password</label>
                         <div class="cols-sm-10">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                @Html.PasswordFor(model => model.password, new { @class = "form-control", Id = "password" })
+                                <input type="password" class="form-control" name="password" value="" />
                             </div>
-                            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="cols-sm-12 control-label">
-                            @Html.CheckBoxFor(model => model.remember_me)
-                            Remember me | <a href="@Url.Action("ForgotPassword")">Forgot password</a>
-                        </label>
+                        <label class="cols-sm-2 control-label">Confirm Password</label>
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                                <input type="password" class="form-control" name="confirm_password" value="" />
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group ">
-                        <input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Login" />
+                        <input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Reset" />
                     </div>
 
-                }
+                            }
             </div>
         </div>
     </div>
