--- a/StockManager/Views/Users/ForgotPassword.cshtml
+++ b/StockManager/Views/Users/ForgotPassword.cshtml
@@ -1,8 +1,5 @@
-﻿@model StockManager.Models.LoginVM
-
-@{
-    ViewBag.Title = "Login";
-    Layout = "";
+﻿@{
+   Layout = "";
 }
 
 <!DOCTYPE html>
@@ -21,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
-    <title>Login</title>
+    <title>Forgot Password</title>
 </head>
 <body>
     <div class="container">
@@ -37,51 +34,15 @@
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
-
+                    
                     <div class="form-group">
-                        @{
-                            if (Session["SUCCESS"] != null)
-                            {
-                                <div class="alert alert-success">
-                                    @Session["SUCCESS"]
-                                </div>
-                            }
-                        }
-                    </div>
-
-                    @Html.Hidden("return_url", Model.return_url)
-
-                    <div class="form-horizontal">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        <label for="name" class="cols-sm-2 control-label">Your Name</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                                @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control", Id = "name" } })
-                            </div>
-                            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                   
-                    <div class="form-group">
-                        <label for="password" class="cols-sm-2 control-label">Password</label>
+                        <label for="email" class="cols-sm-2 control-label">Email Address</label>
                         <div class="cols-sm-10">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                @Html.PasswordFor(model => model.password, new { @class = "form-control", Id = "password" })
+                                <input type="email" class="form-control" name="email" value="" />
                             </div>
-                            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                         </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="cols-sm-12 control-label">
-                            @Html.CheckBoxFor(model => model.remember_me)
-                            Remember me | <a href="@Url.Action("ForgotPassword")">Forgot password</a>
-                        </label>
                     </div>
 
                     <div class="form-group ">
