--- a/StockManager/Views/Invoices/Create.cshtml
+++ b/StockManager/Views/Invoices/Create.cshtml
@@ -135,6 +135,17 @@
     <script>
         $(document).ready(function () {
 
+            $('form').submit(function () {
+
+                var tableRows = $("#products_table tr.itemrow").length;
+
+                if (tableRows == 0) {
+                    alert('Please select at least 1 product for this invoice');
+                    return false;
+                }
+
+            });
+
             $('.selectpicker').selectpicker();
             $("#products_table").on('mouseup keyup', 'input', function () { CalculateTotal(); });
             $("#discount").keyup(function () { CalculateTotal(); });
