--- a/StockManager/Views/PrinterChalans/Edit.cshtml
+++ b/StockManager/Views/PrinterChalans/Edit.cshtml
@@ -114,7 +114,7 @@
                                 <td>
                                     <label class="productFold">Fold</label>
                                 </td>
-                                @if (@Model.IsGivenToPrinting == true)
+                                @if (Model.IsGivenToPrinting == true)
                                 {
                                     <td>
                                         <label class="expectedFold">ExpectedFold</label>
