--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
                             <span>Printer Work</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="~/PrinterChalans/Index/1">Printer Work (Send)</a></li>     
-                            <li><a href="~/PrinterChalans/Index/0">Printer Work (Receive)</a></li>   
+                            <li><a href="~/PrinterChalans/Index">Printer Work (Send)</a></li>     
+                            <li><a href="~/PrintJobWorkReceived/Index">Printer Work (Receive)</a></li>   
                         </ul>
                     </li>       
                     <li class="sub-menu">
