--- a/StockManager/Models/StockManagerEntities.Context.tt
+++ b/StockManager/Models/StockManagerEntities.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"StockManager.edmx";
+const string inputFile = @"StockManagerEntities.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
