--- a/StockManager/Views/Invoices/Create.cshtml
+++ b/StockManager/Views/Invoices/Create.cshtml
@@ -7,6 +7,7 @@
 
 @section css{
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 }
 
 <h4 style="margin-top: 20px">Invoice | Create</h4>
@@ -18,6 +19,9 @@
     <div class="container-fluid">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
+        @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
+        @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
 
         <div class="row">
             <div class="col-md-2">
@@ -37,7 +41,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label>Date</label>
-                    @Html.EditorFor(model => model.created_on, new { htmlAttributes = new { @class = "form-control form_date", required = "true" } })
+                    @Html.EditorFor(model => model.created_on, new { htmlAttributes = new { @class = "form-control", Id = "date_range", required = "true" } })
                     @Html.ValidationMessageFor(model => model.created_on, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -118,7 +122,7 @@
                         <input type="hidden" name="gross_amount" id="gross" value="0">
                         <input type="hidden" name="net_amount" id="total" value="0">
                     </div>
-                </div>                
+                </div>
             </div>
         </div>
     </div>
@@ -130,10 +134,26 @@
 </div>
 
 @section Scripts {
-    
+
+    <script src="~/Scripts/js/jquery-1.8.3.min.js"></script>
+    <script src="~/Scripts/js/jquery.validate.min.js"></script>
+    <script src="~/Scripts/js/jquery.validate.unobtrusive.min.js"></script>
+
+    <!-- DateRanger -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
     <script>
         $(document).ready(function () {
+
+            $('#date_range').daterangepicker({
+                "singleDatePicker": true,
+                "startDate": "@ViewBag.StartYear",
+                "endDate": "@ViewBag.EndYear",
+                "minDate": "@ViewBag.StartYear",
+                "maxDate": "@ViewBag.EndYear"
+            });
 
             $('form').submit(function () {
 
@@ -213,8 +233,7 @@
 
         });
 
-        function CalculateTotal()
-        {
+        function CalculateTotal() {
 
             var subtotal = 0;
             var total_discount = $("#discount").val();
@@ -227,14 +246,14 @@
 
                 var ptotal = (qty * sale_price) - discount;
 
-                $(this).children('.ptotal').text(ptotal);
+                $(this).children('.ptotal').text("Rs " + ptotal);
 
                 subtotal += ptotal;
 
             });
 
-            $("#sub_total").html(subtotal);
-            $("#total_discount").html(subtotal - total_discount);
+            $("#sub_total").html("Rs " + subtotal);
+            $("#total_discount").html("Rs " + (subtotal - total_discount));
 
             $("input#gross").val(subtotal);
             $("input#total").val(subtotal - total_discount);
