--- a/StockManager/Views/Invoices/Edit.cshtml
+++ b/StockManager/Views/Invoices/Edit.cshtml
@@ -7,6 +7,7 @@
 
 @section css{
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 }
 
 <h4 style="margin-top: 20px">Invoice | Create</h4>
@@ -16,18 +17,21 @@
     @Html.AntiForgeryToken()
 
     @Html.Hidden("deleted_items", "", new { Id = "deleted_array" })
-   
+
     <div class="container-fluid">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <input type="hidden" name="Id" value="@Model.Id" />
+        @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
+        @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
+        @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+        @Html.HiddenFor(x => x.invoice_no)
 
         <div class="row">
             <div class="col-md-2">
                 <div class="form-group">
                     <label>Invoice #</label>
-                    @Html.EditorFor(model => model.invoice_no, new { htmlAttributes = new { @class = "form-control", Value = @ViewBag.invoice_no, required = true } })
-                    @Html.ValidationMessageFor(model => model.invoice_no, "", new { @class = "text-danger" })
+                    <div><h5>@Model.invoice_no</h5></div>
                 </div>
             </div>
             <div class="col-md-4">
@@ -40,7 +44,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label>Date</label>
-                    @Html.EditorFor(model => model.created_on, new { htmlAttributes = new { @class = "form-control form_date" } })
+                    @Html.EditorFor(model => model.created_on, new { htmlAttributes = new { @class = "form-control form_date", Id = "date_range", required = true} })
                     @Html.ValidationMessageFor(model => model.created_on, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -106,7 +110,7 @@
                                         <input type='text' name='InvoiceDetails[@i].discount' class='itemInput form-control' value='@item.discount' />
                                     </td>
                                     <td class='ptotal'>
-                                        @((item.quantity * item.sale_rate) - item.discount)
+                                        Rs @((item.quantity * item.sale_rate) - item.discount)
                                     </td>
                                     <td>
                                         <a data-detail-id="@item.Id" style='margin-top: 5px;' href='#' class='delete btn btn-xs btn-danger'>X</a>
@@ -125,7 +129,7 @@
                             Subtotal
                         </td>
                         <td id="sub_total">
-                            @Model.gross_amount
+                            Rs @Model.gross_amount
                         </td>
                     </tr>
                     <tr>
@@ -142,14 +146,14 @@
                             Total
                         </td>
                         <td id="total_discount">
-                            @Model.net_amount
+                            Rs @Model.net_amount
                         </td>
                     </tr>
                 </table>
                 <div>
                     <div>
                         <button class="btn btn-block btn-success">
-                            Generate Invoice
+                            Update Invoice
                         </button>
                     </div>
                     <div>
@@ -169,10 +173,21 @@
 
 @section Scripts {
 
+    <!-- DateRanger -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
     <script>
         $(document).ready(function () {
 
+            $('#date_range').daterangepicker({
+                "singleDatePicker": true,
+                "startDate": "@ViewBag.StartYear",
+                "endDate": "@ViewBag.EndYear",
+                "minDate": "@ViewBag.StartYear",
+                "maxDate": "@ViewBag.EndYear"
+            });
 
             $('form').submit(function () {
 
@@ -180,12 +195,11 @@
                 var count = 0;
 
                 $.each(tableRows, function () {
-                    if ( $(this).is(":visible") )
-                    {
+                    if ($(this).is(":visible")) {
                         count++;
                     }
                 });
-                
+
                 if (count == 0) {
                     alert('Please select at least 1 product for this invoice');
                     return false;
@@ -281,14 +295,14 @@
 
                 var ptotal = (qty * sale_price) - discount;
 
-                $(this).children('.ptotal').text(ptotal);
+                $(this).children('.ptotal').text("Rs " + ptotal);
 
                 subtotal += ptotal;
 
             });
 
-            $("#sub_total").html(subtotal);
-            $("#total_discount").html(subtotal - total_discount);
+            $("#sub_total").html("Rs " + subtotal);
+            $("#total_discount").html("Rs " + (subtotal - total_discount));
 
             $("input#gross").val(subtotal);
             $("input#total").val(subtotal - total_discount);
