--- a/StockManager/Views/Invoices/Index.cshtml
+++ b/StockManager/Views/Invoices/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@model PagedList.IPagedList<StockManager.Models.InvoiceMaster>
-@using PagedList.Mvc;
+﻿@model List<StockManager.Models.InvoiceMaster>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+@section css
+{
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" />
 }
 
 <h2>Invoices</h2>
@@ -10,55 +16,63 @@
 <p>
     @Html.ActionLink("Create New Invoice", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table table-striped table-advance table-hover mt">
-    <tr>
-        <th>
-            Invoice #
-        </th>
-        <th>
-            Vendor
-        </th>
-        <th>
-            Gross
-        </th>
-        <th>
-            Net
-        </th>
-        <th>
-            Created On
-        </th>
-        <th>
-            Actions
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<table class="jTable table table-striped table-advance table-hover mt">
+    <thead>
         <tr>
-            <td>
-                @Html.ActionLink(item.invoice_no, "Details", new { id = item.invoice_no })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Vendor.VendorName)
-            </td>
-            <td>
-                $ @Html.DisplayFor(modelItem => item.gross_amount)
-            </td>
-            <td>
-                $ @Html.DisplayFor(modelItem => item.net_amount)
-            </td>
-            <td>
-                @(item.created_on?.ToString("MM/dd/yyyy"))
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.invoice_no }, new { @class = "btn btn-xs btn-warning" }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.invoice_no }, new { @class = "btn btn-xs btn-danger" })
-            </td>
+            <th>
+                Invoice #
+            </th>
+            <th>
+                Vendor
+            </th>
+            <th>
+                Gross
+            </th>
+            <th>
+                Net
+            </th>
+            <th>
+                Created On
+            </th>
+            <th>
+                Actions
+            </th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.invoice_no.ToString(), "Details", new { id = item.invoice_no })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Vendor.VendorName)
+                </td>
+                <td>
+                    $ @Html.DisplayFor(modelItem => item.gross_amount)
+                </td>
+                <td>
+                    $ @Html.DisplayFor(modelItem => item.net_amount)
+                </td>
+                <td>
+                    @(item.created_on?.ToString("MM/dd/yyyy"))
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.invoice_no }, new { @class = "btn btn-xs btn-warning" }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.invoice_no }, new { @class = "btn btn-xs btn-danger" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
 
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-@Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page }))
+@section Scripts{
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.jTable').DataTable();
+        });
+    </script>
+
+}
