--- a/StockManager/Views/Users/Create.cshtml
+++ b/StockManager/Views/Users/Create.cshtml
@@ -14,7 +14,8 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+    <input type="hidden" name="TenantId" value="@Session["TenantID"]" />
+
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
@@ -56,14 +57,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TenantId, "Tenant", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("TenantId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TenantId, "", new { @class = "text-danger" })
             </div>
         </div>
 
